# warehouse-digital-twin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
coordinator/: assignment.py  cbs.py  deadlock.py  strategy.py
docs/: architecture.mmd  gotchas.md  m5-expert-consultation.md  m5-expert-response.md  results-phase-2.md  results.md
docs/blog/: 2026-05-17-pick-chain-redesign.md
docs/runs/: README.md
docs/runs/m5_smoke_v22_fp/: metrics.json  progress.txt
docs/runs/m5_smoke_v22g_gt/: metrics.json  progress.txt
docs/runs/m5_smoke_v22h_gt/: metrics.json  progress.txt
docs/runs/m7_steady_state_gt/: metrics.json  progress.txt
docs/superpowers/plans/: 2026-05-14-warehouse-digital-twin-phase-1.md  2026-05-15-warehouse-digital-twin-phase-2.md  2026-05-16-pick-chain-redesign.md
docs/superpowers/specs/: 2026-05-14-warehouse-digital-twin-design.md  2026-05-15-warehouse-digital-twin-phase-2-design.md  2026-05-16-pick-chain-redesign-design.md
docs/upstream/: rclpy-action-server-keyerror.md
manipulation/: FOUNDATIONPOSE.md  grasping.py  motion_planning.py  pick_worker.py  pipeline.py  pose_estimation.py  pose_source.py
metrics/: aggregate.py  recorder.py  video.py
nav_drivers/: __init__.py  pure_pursuit.py
ros2_ws/src/fleet_coordinator/: package.xml  setup.py
ros2_ws/src/fleet_coordinator/fleet_coordinator/: node.py
ros2_ws/src/warehouse_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_bringup/config/: nav2_amr.yaml
ros2_ws/src/warehouse_bringup/launch/: amr.launch.py
ros2_ws/src/wdt_carter_description/: CMakeLists.txt  package.xml
ros2_ws/src/wdt_carter_description/launch/: carter_description.launch.py
ros2_ws/src/wdt_carter_description/urdf/: carter.urdf.xacro
ros2_ws/src/wdt_franka_description/: CMakeLists.txt  package.xml
ros2_ws/src/wdt_franka_description/launch/: franka_description.launch.py
ros2_ws/src/wdt_manipulation_bringup/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/wdt_manipulation_bringup/launch/: move_group.launch.py
ros2_ws/src/wdt_manipulation_bringup/wdt_manipulation_bringup/: pick_cell_orchestrator.py
ros2_ws/src/wdt_nav2_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/wdt_nav2_bringup/config/: nav2_params.yaml
ros2_ws/src/wdt_nav2_bringup/launch/: multi_amr.launch.py  single_amr.launch.py  single_amr_no_map.launch.py
ros2_ws/src/wdt_nav2_bringup/maps/: small.pgm
ros2_ws/src/wdt_pure_pursuit/: package.xml  setup.py
ros2_ws/src/wdt_pure_pursuit/launch/: multi_amr.launch.py  single_amr.launch.py
ros2_ws/src/wdt_pure_pursuit/wdt_pure_pursuit/: driver.py
scenarios/: schema.py  smoke.yaml  steady_state.yaml
sim/: cell_camera.py  multi_robot.py  overhead_capture.py  runner.py  spawn.py
tests/integration/: test_foundationpose_smoke.py  test_pick_chain_fast.py
tests/unit/: test_aggregate.py  test_assignment.py  test_build_scene_map.py  test_cbs.py  test_deadlock.py  test_grasping.py  test_layout.py  test_map_export.py  test_modal_app.py  test_nearest_assign.py  test_pick_worker.py  test_pipeline.py  test_pose_estimation.py  test_pose_source.py  test_pure_pursuit.py  test_recorder.py  test_scenario_schema.py  test_spawn_poses.py  test_strategy.py  test_top_down_grasp.py
warehouse/: layout.py
warehouse/generators/: build_scene.py  map_export.py
warehouse/layouts/: small.yaml
warehouse/maps/: small.yaml
wdt_modal/: app.py  asset_setup.py  budget.py  build_pytorch3d_wheel.py  image.py  isaac_smoke.py  probe_isaac_sim.py  probe_isaac_sim_layer2.py  scene_build.py  stage_foundationpose_weights.py  volumes.py
wdt_vast/: README.md  bootstrap_phase1.sh  bootstrap_phase2.sh  carter_topic_smoke.py  cmd_vel_smoke.py  combined_render.py  combined_smoke.py  fleet_topic_smoke.py  franka_ready_joint_states.py  install_foundationpose.sh  moveit_plan_smoke.py  nav2_cmd_vel_probe.py  nav2_single_amr_smoke.py  pure_pursuit_multi_smoke.py  pure_pursuit_smoke.py  render_pick_cell.py  render_scene.py  render_smoke.py  ros2_bridge_smoke.py  run_ablation.py  run_scenario.py  sim_carter_single.py  sim_fleet.py  sim_world_pose_publisher.py  snapshot_cell_cam.py  synthetic_cell_camera.py
wdt_vast/scripts/: diagnose_fleet_tf.sh
