<?xml version="1.0"?>
<package format="3">
  <name>fleet_coordinator</name>
  <version>0.0.1</version>
  <description>Hungarian + CBS fleet coordinator for warehouse AMRs.</description>
  <maintainer email="zeon01@users.noreply.github.com">Saad Sharif Ahmed</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
