<?xml version="1.0"?>
<package format="3">
  <name>wdt_carter_description</name>
  <version>0.2.0</version>
  <description>URDF description of Nova Carter for Nav2 footprint + TF.</description>
  <maintainer email="zeon01@users.noreply.github.com">Saad Sharif Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
