<?xml version="1.0"?>
<!--
  MoveIt2 move_group + pick_cell_orchestrator bringup.

  Phase 2 wires the apt-installed moveit_resources_panda_moveit_config
  package into move_group and adds a Python entry point for the
  pick_cell_orchestrator ROS2 node (Task 27).

  ament_python (not ament_cmake) — needed for the console_scripts entry
  point that exposes pick_cell_orchestrator to `ros2 run`.
-->
<package format="3">
  <name>wdt_manipulation_bringup</name>
  <version>0.2.0</version>
  <description>MoveIt2 move_group + pick_cell_orchestrator bringup.</description>
  <maintainer email="zeon01@users.noreply.github.com">Saad Sharif Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>wdt_franka_description</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
