<?xml version="1.0"?>
<!--
  Pure-pursuit go-to-goal driver — Nav2 controller fallback for Isaac
  Sim Nova Carter when DWB doesn't drive the robot (Phase 2 M1 debug
  2026-05-15: Nav2 lifecycle activates and bt_navigator accepts goals,
  but cmd_vel either never flows from DWB or Carter ignores it).

  Exposes a /<ns>/navigate_to_pose action server with the same
  ``nav2_msgs/action/NavigateToPose`` interface as bt_navigator, so the
  fleet_coordinator works unchanged. Use this OR the Nav2 stack, not
  both — same action name.
-->
<package format="3">
  <name>wdt_pure_pursuit</name>
  <version>0.2.0</version>
  <description>Pure-pursuit NavigateToPose action server — Nav2 controller fallback.</description>
  <maintainer email="zeon01@users.noreply.github.com">Saad Sharif Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
